2025-spring-cs-122b-fecal-sql-cus-we-da-poop-master/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabflix-deployment
  labels:
    app: fabflix
spec:
  replicas: 1 # You can increase this later for more instances
  selector:
    matchLabels:
      app: fabflix
  template:
    metadata:
      labels:
        app: fabflix
    spec:
      containers:
        - name: fabflix-container
          image: donchenn/fabflix:v1
          ports:
            - containerPort: 8080
