2025-spring-cs-122b-fecal-sql-cus-we-da-poop-master/login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabflix-login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabflix-login
  template:
    metadata:
      labels:
        app: fabflix-login
    spec:
      containers:
        - name: fabflix-login
          # Best practice: Use a specific version tag instead of 'latest'
          image: donchenn/login-service:v1.0.0
          ports:
            - containerPort: 8080
