2025-spring-cs-122b-fecal-sql-cus-we-da-poop-master/movies-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabflix-movies
spec:
  # Scaling the movies service to 2 replicas for read-heavy traffic is a good approach
  replicas: 2
  selector:
    matchLabels:
      app: fabflix-movies
  template:
    metadata:
      labels:
        app: fabflix-movies
    spec:
      containers:
        - name: fabflix-movies
          # Best practice: Use a specific version tag instead of 'latest'
          image: donchenn/movies-service:v1.0.0
          ports:
            - containerPort: 8080
