2025-spring-cs-122b-fecal-sql-cus-we-da-poop-master/login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fabflix-login-service
spec:
  selector:
    app: fabflix-login
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
