2025-spring-cs-122b-fecal-sql-cus-we-da-poop-master/movies-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fabflix-movies-service
spec:
  selector:
    app: fabflix-movies
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
