2025-spring-cs-122b-fecal-sql-cus-we-da-poop-master/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fabflix-service
spec:
  selector:
    app: fabflix
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
