2025-spring-cs-122b-fecal-sql-cus-we-da-poop-master/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fabflix-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fabflix-service
                port:
                  number: 80
